<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="650dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/round_conner_whitebg"
    android:padding="16dp"

    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/btnClose"
        android:background="@drawable/ic_close"/>
    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/carCategoryEdit"
        android:layout_marginTop="30dp"
        android:hint="@string/hintCarCategory"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <EditText
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/carMakerEdit"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:ems="10"
        android:hint="@string/hintCarMaker"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/carCategoryEdit"
        android:layout_marginTop="15dp" />
    <EditText
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/carModelEdit"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:ems="10"
        android:hint="@string/hintCarModel"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/carMakerEdit"
        android:layout_marginTop="15dp" />
    <EditText
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/carColorEdit"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:ems="10"
        android:hint="@string/hintCarColor"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/carModelEdit"
        android:layout_marginTop="15dp" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/carPriceHourEdit"
        android:layout_marginTop="15dp"
        android:hint="@string/textCarPricePerHour"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:padding="10dp"
        android:layout_below="@id/carColorEdit"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/carPriceDayEdit"
        android:ems="10"
        android:hint="@string/textCarPricePerDay"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/carPriceHourEdit"
        android:layout_marginTop="15dp"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/carSeats"
        android:ems="10"
        android:hint="Number of Seat"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/carPriceDayEdit"
        android:layout_marginTop="15dp"
        android:inputType="number"/>
    <CheckBox
    android:id="@+id/carAvailableCheckBox"
    android:layout_weight="1"
    android:textColor="@color/colorSecondary"
    app:buttonTint="@color/colorSecondary"
    android:text="Available"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/carSeats"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btnAddNew"
        android:layout_below="@id/carAvailableCheckBox"
        android:layout_centerHorizontal="true"
        android:text="Add"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorThird"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btnUpdate"
        android:layout_below="@id/btnAddNew"
        android:layout_centerHorizontal="true"
        android:text="Update"
        android:textColor="@color/colorSecondary"
        android:background="@color/colorThird"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        />
    <!--<LinearLayout-->
        <!--android:id="@+id/linearBtn"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_below="@id/carAvailableCheckBox"-->
        <!--android:orientation="horizontal"-->

        <!--&gt;-->

    <!--</LinearLayout>-->
    <!--<Button-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:id="@+id/btnDelete"-->
        <!--android:layout_below="@id/linearBtn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="Delete"-->
        <!--android:textColor="@color/colorSecondary"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:layout_marginLeft="40dp"-->
        <!--/>-->

</RelativeLayout>